syntax = "proto3";

package sleepymemory;

import "google/protobuf/duration.proto";

option go_package = "github.com/evanj/concurrentlimit/sleepymemory";

message SleepRequest {
  // The duration the request will sleep.
  google.protobuf.Duration sleep_duration = 1;

  // Bytes of memory that will be allocated before sleeping to simulate requests that use lots of memory.
  int64 waste_bytes = 2;
}

message SleepResponse {
  // The value is ignored but exists to prevent garbage collection freeing the waste slice early.
  int64 ignored = 1;
}

// Sleeper will sleep and waste memory to test concurrent requests and memory limits.
service Sleeper {
  rpc Sleep (SleepRequest) returns (SleepResponse);
}
